--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 </head>
 <body>
+
+	<div class="preloader"></div>
 	
 	<div class="owl-carousel">
 		<div class="item">ITEM - 1</div>
