--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Web portfolio</title>
+	<link rel="icon" type="image/png" href="img/logoMain.png" />
 
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
