--- a/index.html
+++ b/index.html
@@ -34,41 +34,36 @@
 		</ul>
 	</nav>
 
-	<section class="temp">I am web designer</section>
+	<section class="temp d-none">I am web designer</section>
 
-	
-	<div class="owl-carousel d-none">
-		<div class="item">ITEM - 1</div>
-		<div class="item">ITEM - 2</div>
-		<div class="item">ITEM - 3</div>
-		<div class="item">ITEM - 4</div>
-		<div class="item">ITEM - 5</div>
-		<div class="item">ITEM - 6</div>
-		<div class="item">ITEM - 7</div>
-		<div class="item">ITEM - 8</div>
-		<div class="item">ITEM - 9</div>
-		<div class="item">ITEM - 10</div>
-		<div class="item">ITEM - 11</div>
-		<div class="item">ITEM - 12</div>
-		<div class="item">ITEM - 13</div>
-		<div class="item">ITEM - 14</div>
-		<div class="item">ITEM - 15</div>
-		<div class="item">ITEM - 16</div>
-		<div class="item">ITEM - 17</div>
-		<div class="item">ITEM - 18</div>
-		<div class="item">ITEM - 19</div>
-		<div class="item">ITEM - 20</div>
-		<div class="item">ITEM - 21</div>
-		<div class="item">ITEM - 22</div>
-		<div class="item">ITEM - 23</div>
-		<div class="item">ITEM - 24</div>
-		<div class="item">ITEM - 25</div>
-		<div class="item">ITEM - 26</div>
-		<div class="item">ITEM - 27</div>
-		<div class="item">ITEM - 28</div>
-		<div class="item">ITEM - 29</div>
-		<div class="item">ITEM - 30</div>
-	</div>
+	<section class="about d-none">
+		<div class="abouText">
+			<p>I am 22 years old. I have been living in Kiev for 5 years. I never give up on robots. Probably, this is enough for the story. If you have questions, I am ready to answer each of them.</p>
+			<p><b>Skills: </b>After Effects, Illustrator, Photoshop, Figma, SketchApp, Principle, Flinto, InDesign, InVision.</p>
+		</div>
+		<div class="aboutImg"><img src="img/imgDesign.svg" alt=""></div>
+	</section>
+
+	<section class="work d-none">
+		<div class="owl-carousel">
+			<div class="item"><img src="img/rectangle.svg" alt=""></div>
+			<div class="item"><img src="img/rectangle.svg" alt=""></div>
+			<div class="item"><img src="img/rectangle.svg" alt=""></div>
+			<div class="item"><img src="img/rectangle.svg" alt=""></div>
+			<div class="item"><img src="img/rectangle.svg" alt=""></div>
+			<div class="item"><img src="img/rectangle.svg" alt=""></div>
+		</div>
+		<div class="blockTitle">My works</div>
+	</section>
+
+	<section class="contact">
+		<div class="blockContact">
+			<div class="singleContact"><a href="tel:0507481970">+38 (050) 748 19 70</a></div>
+			<div class="singleContact"><a href="mailto:stasinyoyo@gmail.com">stasinyoyo@gmail.com</a></div>
+			<div class="singleContact"><a href="https://www.behance.net/stasinyoyo3db7" target="_blank">behance.net/stasinyoyo3db7</a></div>
+		</div>
+		<div class="blockTitle">Conection with me</div>
+	</section>
 
 	<script src="js/jQuery.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
