--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 		</ul>
 	</nav>
 
-	<section class="temp d-none">I am web designer</section>
+	<section class="temp sectionBlock active">I am web designer</section>
 
-	<section class="about d-none">
+	<section class="about sectionBlock">
 		<div class="abouText">
 			<p>I am 22 years old. I have been living in Kiev for 5 years. I never give up on robots. Probably, this is enough for the story. If you have questions, I am ready to answer each of them.</p>
 			<p><b>Skills: </b>After Effects, Illustrator, Photoshop, Figma, SketchApp, Principle, Flinto, InDesign, InVision.</p>
@@ -44,7 +44,7 @@
 		<div class="aboutImg"><img src="img/imgDesign.svg" alt=""></div>
 	</section>
 
-	<section class="work d-none">
+	<section class="work sectionBlock visiVis">
 		<div class="owl-carousel">
 			<div class="item"><img src="img/rectangle.svg" alt=""></div>
 			<div class="item"><img src="img/rectangle.svg" alt=""></div>
@@ -56,7 +56,7 @@
 		<div class="blockTitle">My works</div>
 	</section>
 
-	<section class="contact">
+	<section class="contact sectionBlock">
 		<div class="blockContact">
 			<div class="singleContact"><a href="tel:0507481970">+38 (050) 748 19 70</a></div>
 			<div class="singleContact"><a href="mailto:stasinyoyo@gmail.com">stasinyoyo@gmail.com</a></div>
