--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<header>
 		<div class="logo">
-			<a href="#"><img src="img/logoMain.svg" alt=""></a>
+			<img src="img/logoMain.svg" alt="">
 		</div>
 		<div class="social">
 			<div class="sSoc"><a href="#"><img src="img/behance-logo.svg" alt=""></a></div>
@@ -46,12 +46,8 @@
 
 	<section class="work sectionBlock visiVis">
 		<div class="owl-carousel">
-			<div class="item"><img src="img/rectangle.svg" alt=""></div>
-			<div class="item"><img src="img/rectangle.svg" alt=""></div>
-			<div class="item"><img src="img/rectangle.svg" alt=""></div>
-			<div class="item"><img src="img/rectangle.svg" alt=""></div>
-			<div class="item"><img src="img/rectangle.svg" alt=""></div>
-			<div class="item"><img src="img/rectangle.svg" alt=""></div>
+			<div class="item"><img src="img/proj-1.jpg" alt=""></div>
+			<div class="item"><img src="img/proj-2.jpg" alt=""></div>
 		</div>
 		<div class="blockTitle">My works</div>
 	</section>
