--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Web portfolio</title>
 	<link rel="icon" type="image/png" href="img/logoMain.png" />
 
+	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -20,10 +21,10 @@
 			<img src="img/logoMain.svg" alt="">
 		</div>
 		<div class="social">
-			<div class="sSoc"><a href="#"><img src="img/behance-logo.svg" alt=""></a></div>
-			<div class="sSoc"><a href="#"><img src="img/insta-logo.svg" alt=""></a></div>
-			<div class="sSoc"><a href="#"><img src="img/facebook-logo.svg" alt=""></a></div>
-			<div class="sSoc"><a href="#"><img src="img/telegram-logo.svg" alt=""></a></div>
+			<div class="sSoc"><a href="https://www.behance.net/stasinyoyo3db7" target="_blank"><img src="img/behance-logo.svg" alt=""></a></div>
+			<div class="sSoc"><a href="https://www.instagram.com/cremaantirughe/?hl=ru" target="_blank"><img src="img/insta-logo.svg" alt=""></a></div>
+			<div class="sSoc"><a href="https://www.facebook.com/profile.php?id=100017429762378" target="_blank"><img src="img/facebook-logo.svg" alt=""></a></div>
+			<div class="sSoc"><a href="https://telegram.me/creama" target="_blank"><img src="img/telegram-logo.svg" alt=""></a></div>
 		</div>
 	</header>
 	<nav class="nav">
@@ -34,32 +35,62 @@
 		</ul>
 	</nav>
 
-	<section class="temp sectionBlock active">I am web designer</section>
+	<section class="work sectionBlock active">
 
-	<section class="about sectionBlock">
-		<div class="abouText">
-			<p>I am 22 years old. I have been living in Kiev for 5 years. I never give up on robots. Probably, this is enough for the story. If you have questions, I am ready to answer each of them.</p>
-			<p><b>Skills: </b>After Effects, Illustrator, Photoshop, Figma, SketchApp, Principle, Flinto, InDesign, InVision.</p>
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<div class="owl-carousel">
+						<div class="group" data-letter="T">
+							<div class="title">Tasty Fasty <span>App</span></div>
+							<div class="description">In two minutes you already know what, <br>where and when you eat</div>
+							<!-- <div class="arrowRight"><a href="#"><img src="img/arrow.svg" alt=""></a></div> -->
+						</div>						
+						<div class="group" data-letter="A">
+							<div class="title">App <span>Tasty Fasty</span></div>
+							<div class="description">In two minutes you already know what, <br>where and when you eat</div>
+							<!-- <div class="arrowRight"><a href="#"><img src="img/arrow.svg" alt=""></a></div> -->
+						</div>
+	
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="aboutImg"><img src="img/imgDesign.svg" alt=""></div>
+
 	</section>
 
-	<section class="work sectionBlock visiVis">
-		<div class="owl-carousel">
-			<div class="item"><img src="img/proj-1.jpg" alt=""></div>
-			<div class="item"><img src="img/proj-2.jpg" alt=""></div>
+	<section class="about sectionBlock">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-5">
+					<div class="aboutTitle">About <br>me</div>
+				</div>
+			</div>
+			<div class="row abouText">
+				<div class="offset-md-3 col-md-4">I am 22 years old. I live in Kiev, I have been designing for 5 years. I will never give up robots. This is probably enough. If you have questions, I am ready to answer each of them.</div>
+				<div class="col-md-4"><b>Skills:</b> After Effects, Illustrator, Photoshop, Figma, SketchApp, Principle, Flinto, InDesign, InVision.</div>
+			</div>
 		</div>
-		<div class="blockTitle">My works</div>
 	</section>
 
 	<section class="contact sectionBlock">
-		<div class="blockContact">
-			<div class="singleContact"><a href="tel:0507481970">+38 (050) 748 19 70</a></div>
-			<div class="singleContact"><a href="mailto:stasinyoyo@gmail.com">stasinyoyo@gmail.com</a></div>
-			<div class="singleContact"><a href="https://www.behance.net/stasinyoyo3db7" target="_blank">behance.net/stasinyoyo3db7</a></div>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<div class="aboutTitle">Contact <br>with me</div>
+				</div>
+			</div>
+			<div class="row abouText">
+				<div class="offset-md-7 col-md-4">
+					<div class="singleContact"><a href="tel:+380507481970">+38 (050) 748 19 70</a></div>
+					<div class="singleContact"><a href="mailto:stasinyoyo@gmail.com">stasinyoyo@gmail.com</a></div>
+					<div class="singleContact"><a href="https://www.behance.net/stasinyoyo3db7" target="_blank">behance.net/stasinyoyo3db7</a></div>
+				</div>
+			</div>
 		</div>
-		<div class="blockTitle">Conection with me</div>
 	</section>
+
+
 
 	<script src="js/jQuery.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
