--- a/index.html
+++ b/index.html
@@ -41,13 +41,18 @@
 			<div class="row">
 				<div class="col-12">
 					<div class="owl-carousel">
-						<div class="group" data-letter="T">
+						<div class="group">
 							<div class="title">Tasty Fasty <span>App</span></div>
 							<div class="description">In two minutes you already know what, <br>where and when you eat</div>
 							<!-- <div class="arrowRight"><a href="#"><img src="img/arrow.svg" alt=""></a></div> -->
 						</div>						
-						<div class="group" data-letter="A">
+						<div class="group">
 							<div class="title">App <span>Tasty Fasty</span></div>
+							<div class="description">In two minutes you already know what, <br>where and when you eat</div>
+							<!-- <div class="arrowRight"><a href="#"><img src="img/arrow.svg" alt=""></a></div> -->
+						</div>
+						<div class="group">
+							<div class="title">Set <span>Rasty Fasty</span></div>
 							<div class="description">In two minutes you already know what, <br>where and when you eat</div>
 							<!-- <div class="arrowRight"><a href="#"><img src="img/arrow.svg" alt=""></a></div> -->
 						</div>
